--- a/TourManagement.Presentation/Views/Tours/Details.cshtml
+++ b/TourManagement.Presentation/Views/Tours/Details.cshtml
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div class="input-group py-3 justify-content-center">
-                <a href="@Url.Action("OrderTour","OrderTours", new { id= Model.Id})" id="btnBook" class="btn btn-primary mr-3">Đặt ngay</a>
+                <a href="@Url.Action("OrderTour","OrderTours", new { id= Model.Id})" target="_blank" id="btnBook" class="btn btn-primary mr-3">Đặt ngay</a>
             </div>
 
         </div>
