--- a/TourManagement.Presentation/Views/Home/Index.cshtml
+++ b/TourManagement.Presentation/Views/Home/Index.cshtml
@@ -23,6 +23,27 @@
             </div>
         </div>
     </div>
+    <div class="container m-auto row">
+        <div class="col-lg-12">
+            @using (Html.BeginForm("SearchTour", "Home", FormMethod.Get, new { @class = "form-inline d-flex" }))
+            {
+                <div class="col-lg-4">
+                    <h3>Điểm đến</h3>
+                    <input class=" mr-sm-2 btn-none" id="seach" name="search" type="search" placeholder="Điểm đến" aria-label="Search">
+                </div>
+
+                <div class="col-lg-4">
+                    <h3>Thời gian</h3>
+                    <input type="date" placeholder="Date" name="datepick" id="datepick" class="" required>
+                </div>
+
+                <div class="col-lg-4">
+                    <button class="btn btn-outline-success " type="submit">Search</button>
+                </div>
+            }
+        </div>
+    </div>
+
 </div>
 <div class="container pt-3 px-0">
     <div>
