--- a/TourManagement.Presentation/Views/Shared/_Layout.cshtml
+++ b/TourManagement.Presentation/Views/Shared/_Layout.cshtml
@@ -18,50 +18,38 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light pr-5s pl-2 fixed-top" style="background-color:aliceblue;">
-        <div class="col-2">
+    <nav class="nav_header fixed-top row align-items-center" style="background-color:aliceblue;">
+        <div class="col-2 pl-5">
             HotLine: <span style="color: red; font: bold">1900 8198</span>
         </div>
-        <div class="col-1 text-center p-0">
+        <div class="col-1 justify-content-center p-0 d-flex align-items-center">
             <a href="@Url.Action("Index", "Home", new { area = "" })">
                 <img class="border rounded-circle" src="~/Content/images/tours/logo1.jpg" style="width: 50px; height:50px">
             </a>
-
         </div>
 
-        <div class="collapse navbar-collapse row">
-            <ul class="navbar-nav col-4">
-                <li class="nav-item dropdown" id="group-tour">
-                    <a class="nav-link font-weight-bold" href="@Url.Action("Index", "Home", new { area = "" })">TOUR</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="@Url.Action("GetByCategory", "Tours", new { category = "Trong nước", page = 1 })">Trong nước</a>
-                        <a class="dropdown-item" href="@Url.Action("GetByCategory", "Tours", new { category = "Ngoài nước", page = 1 })">Nước ngoài</a>
-                    </div>
+        <div class="col-7 nav_menu p-0 h-100">
+            <ul class="m-0 p-0 h-100">
+                <li >
+                    <a href="@Url.Action("Index", "Home", new { area = "" })">TOUR</a>
+                    <ul class="dropmenu p-0">
+                        <li><a href="@Url.Action("GetByCategory", "Tours", new { category = "Trong nước", page = 1 })">Trong nước</a></li>
+                        <li><a href="@Url.Action("GetByCategory", "Tours", new { category = "Ngoài nước", page = 1 })">Nước ngoài</a></li>
+                    </ul>
                 </li>
-                <li class="nav-item font-weight-bold">
-                    @Html.ActionLink("KHÁCH SẠN", "Index", "Hotels", new { area = "", page = 1 }, new { @class = "nav-link" })
+                <li >
+                    <a href="@Url.Action("Index", "Hotels", new { area = "" })">KHÁCH SẠN</a>
                 </li>
-                <li class="nav-item font-weight-bolder">
-                    @Html.ActionLink("GIỚI THIỆU", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })
+                <li>
+                    <a href="@Url.Action("Contact", "Home", new { area = "" })">GIỚI THIỆU</a>
                 </li>
             </ul>
 
-            @using (Html.BeginForm("SearchTour", "Home", FormMethod.Get, new { @class = "form-inline my-2 my-lg-0 col-6" }))
-            {
-                <div><input class="form-control mr-sm-2 btn-none" id="seach" name="search" type="search" placeholder="Tìm tour, điểm đến ... " aria-label="Search"></div>
-
-                <div>
-                    <input type="date" placeholder="Date" name="datepick" id="datepick" class="form-control" required>
-                </div>
-
-                <div class="pl-2"><button class="btn btn-outline-success form-control" type="submit">Search</button></div>
-            }
+        </div>
+        <div class="col-2 d-flex align-items-center h-100">
             @Html.Partial("LoginPatial")
         </div>
     </nav>
-    <div class="clearfix">
-
-    </div>
     <div class="container-fluid ptcus-110">
         @RenderBody()
         <hr />
