--- a/TourManagement.Presentation/Views/Home/Index.cshtml
+++ b/TourManagement.Presentation/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Đi muôn nơi - Let's Go";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="py-3">
+<div class="py-3 position-relative">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -23,29 +23,27 @@
             </div>
         </div>
     </div>
-    <div class="container m-auto row">
-        <div class="col-lg-12">
-            @using (Html.BeginForm("SearchTour", "Home", FormMethod.Get, new { @class = "form-inline d-flex" }))
+    <div class="container m-auto row position-absolute">
+        <div class="col-lg-12 p-0 search_form">
+            @using (Html.BeginForm("SearchTour", "Home", FormMethod.Get, new { @class = "form-inline d-flex h-100" }))
             {
-                <div class="col-lg-4">
-                    <h3>Điểm đến</h3>
-                    <input class=" mr-sm-2 btn-none" id="seach" name="search" type="search" placeholder="Điểm đến" aria-label="Search">
+                <div class="col-lg-6 px-5 border-right">
+                    <h5>Điểm đến</h5>
+                    <input class=" mr-sm-2 btn-none w-75" id="seach" name="search" type="search" placeholder="Điểm đến" aria-label="Search">
                 </div>
 
-                <div class="col-lg-4">
-                    <h3>Thời gian</h3>
+                <div class="col-lg-4 px-5 border-right">
+                    <h5>Thời gian</h5>
                     <input type="date" placeholder="Date" name="datepick" id="datepick" class="" required>
                 </div>
 
-                <div class="col-lg-4">
-                    <button class="btn btn-outline-success " type="submit">Search</button>
-                </div>
+                <button class="btn-primary col-lg-2 h-100" type="submit">Search</button>
             }
         </div>
     </div>
 
 </div>
-<div class="container pt-3 px-0">
+<div class="container pt-5 px-0 mt-5">
     <div>
         <div class="seemore row">
             <div class="col-6 font-weight-bold  m-0 p-0">
