--- a/TourManagement.Presentation/Content/Site.css
+++ b/TourManagement.Presentation/Content/Site.css
@@ -65,7 +65,8 @@
     top: -35px;
     z-index: 15;
     background-color: white;
-    box-shadow: 5px 10px 18px #888888;
+    border: 1px solid #dee6e5;
+    /*    box-shadow: 5px 10px 18px #888888;*/
 }
 .search_form input{
     height: 40px;   
