--- a/TourManagement.Presentation/Views/Hotels/Details.cshtml
+++ b/TourManagement.Presentation/Views/Hotels/Details.cshtml
@@ -44,8 +44,11 @@
     <div class="pt-4">
         <div class="py-4 border-top">
             <h4><img src="~/Content/images/content.svg" height="20" width="20"> Giới thiệu chung</h4>
-            <div id="content" class="w-100 pl-4">
-
+            <div class="w-100 pl-4">
+                @if(Model.Content != null)
+                {
+                    @Html.Raw(Model.Content)
+                }
             </div>
         </div>
         @if (Model.Rooms != null)
@@ -82,10 +85,13 @@
     </div>
 </div>
 
-@section scripts {
-    <script type="text/javascript">
-        var html = '@Model.Content';
-        var content = document.getElementById('content');
-        content.innerHTML = strip(html);
-    </script>
+
+@*@section scripts {
+    // add ' id="content" ' to div content
+
+     <script type="text/javascript">
+         var html = '@Model.Content';
+         var content = document.getElementById('content');
+         content.innerHTML = strip(html);
+     </script>*@
 }
