--- a/TourManagement.Presentation/Views/OrderTours/GetInforOrder.cshtml
+++ b/TourManagement.Presentation/Views/OrderTours/GetInforOrder.cshtml
@@ -36,4 +36,7 @@
             }
         </div>
     </div>
+    <div class="row">
+        <div class="col-12">Thành tiền: @Math.Truncate(Model.SumPrice.Value).ToString("###,###,###") đ</div>
+    </div>
 </div>
