--- a/TourManagement.Presentation/Views/Tours/Details.cshtml
+++ b/TourManagement.Presentation/Views/Tours/Details.cshtml
@@ -100,8 +100,11 @@
             </div>
             <div class="py-4 border-top">
                 <h5><img src="~/Content/images/content.svg" height="20" width="20"> Chi tiết</h5>
-                <div id="content" class="w-100 pl-4">
-
+                <div class="w-100 pl-4">
+                    @if (Model.Content != null)
+                    {
+                        @Html.Raw(Model.Content)
+                    }
                 </div>
             </div>
             <div class="row py-4 border-top">
@@ -147,10 +150,12 @@
     </div>
 </div>
 
-@section scripts {
+@*@section scripts {
+   // add ' id="content" ' to div content
+
     <script type="text/javascript">
         var html = '@Model.Content';
         var content = document.getElementById('content');
         content.innerHTML = strip(html);
-    </script>
+    </script>*@
 }
