--- a/TourManagement.Presentation/Areas/Admin/Views/HotelsManagement/Edit.cshtml
+++ b/TourManagement.Presentation/Areas/Admin/Views/HotelsManagement/Edit.cshtml
@@ -90,11 +90,12 @@
             </div>
         </div>
 
+        
         <div class="form-group">
             <label class="control-label">Select images</label>
             <div class="row m-auto">
                 <input type="text" id="Image" name="Image" class="w-100 form-control" value="@Model.Image" />
-                <input type="file" id="filesInput" name="filesInput" class="col-6" multiple onchange="Getname()">
+                <input type="file" id="filesInput" name="filesInput" class="col-6" onchange="Getname()">
             </div>
         </div>
 
