--- a/TourManagement.Presentation/Views/OrderTours/CompleteOrder.cshtml
+++ b/TourManagement.Presentation/Views/OrderTours/CompleteOrder.cshtml
@@ -1,7 +1,7 @@
 ﻿@{ 
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="text-center">
+<div class="text-center py-5">
     <h4>@ViewBag.CompleteMessage</h4>
     <h3>Nhân viên sẽ liên hệ trong thời gian sớm nhất</h3>
     <h3>Cảm ơn quý khách đã sử dụng dịch vụ của công ty chúng tôi</h3>
