--- a/TourManagement.Presentation/Areas/Admin/Views/ToursManagement/Index.cshtml
+++ b/TourManagement.Presentation/Areas/Admin/Views/ToursManagement/Index.cshtml
@@ -57,7 +57,7 @@
             </td>
 
             <td class="d-flex border-bottom-0 border-left-0 border-right-0">
-                <form action="@Url.Action("DeleteTour","ToursManagement", new { id=item.Id })" method="post">
+                <form action="@Url.Action("Delete","ToursManagement", new { id=item.Id })" method="post">
                     <a href="@Url.Action("Edit", "ToursManagement", new { id=item.Id })" class="btn btn-outline-primary mx-1">Edit</a>
                     <button type="submit" onclick="return confirm('Are you sure to delete this tour?');" class="btn btn-outline-danger mx-1">Delete</button>
                 </form>
