--- a/TourManagement.Presentation/Views/Shared/_Layout.cshtml
+++ b/TourManagement.Presentation/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
         <div class="col-2 pl-5">
             <img src="~/Content/images/telephone.svg" height="15" width="15" /> <span style="color: red;">1900 8198</span>
         </div>
-        <div class="col-1 justify-content-between p-0 d-flex align-items-center">
+        <div class="col-1 justify-content-between py-0 d-flex align-items-center">
             <img  src="~/Content/images/beach.svg" width="30" height="30"/>
             <a href="@Url.Action("Index", "Home", new { area = "" })">
                 <img class="border rounded-circle" src="~/Content/images/tours/logo1.jpg" style="width: 50px; height:50px">
